# sk_serve

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sk_serve.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  sk_serve.doctree
.github/workflows/: publish_package.yaml
_modules/: index.html
_modules/sk_serve/: api.html  serve.html
_sources/: index.rst.txt
examples/: README.md  example.py  example_validation.py  produce_objects.py
src/: __init__.py  api.py  serve.py
src/sk_serve/: __init__.py  api.py  serve.py
tests/: test_api.py
