[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sk_serve/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sk_serve"]

[project]
name = "sk-serve"
dynamic = ["version"]
dependencies = [
    "fastapi",
    "pandas",
    "scikit-learn",
    "pydantic"
]
requires-python = ">=3.12"
authors = [
  {name = "Alexandros Liapatis", email = "alexandrosliapatis@gmail.com"}
]
maintainers = [
  {name = "Alexandros Liapatis", email = "alexandrosliapatis@gmail.com"}
]
description = "Deployment of a Scikit-Learn model and it's column transformations with a single endpoint."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
]

[project.optional-dependencies]
dev = ["pre-commit", "pyright"]

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""
Issues = ""
